--- a/.travis.yml
+++ b/.travis.yml
@@ -20,3 +20,16 @@ after_success:
   - docker push bradwilder31415/multi-nginx
   - docker push bradwilder31415/multi-server
   - docker push bradwilder31415/multi-worker
+
+deploy:
+  provider: elasticbeanstalk
+  region: us-west-1
+  app: multi-docker
+  env: MultiDocker-env
+  bucket_name: elasticbeanstalk-us-west-1-435818311296
+  bucket_path: docker-multi
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key:
+    secure: $AWS_SECRET_KEY
